WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227000
A list-style-position:inside list item marker should be rendered as the first child of the list item
https://bugs.webkit.org/show_bug.cgi?id=227000
Summary
A list-style-position:inside list item marker should be rendered as the first...
Mats Palmgren
Reported
2021-06-14 16:54:16 PDT
Created
attachment 431387
[details]
Testcase STEPS TO REPRODUCE 1. load the following testcase: <!doctype html> <ul> <li style="list-style-position:inside"> <div style="border:1px solid">The bullet should be above this line.</div> </li> </ul> EXPECTED RESULTS The list item marker (bullet) should be on the list item's first line. The <div> should render below it. The bullet should be outside the <div>'s border. ACTUAL RESULTS The bullet is inside the <div>'s border on the same line as the text. RELEVANT CSS SPEC TEXT "The marker box is generated by the ::marker pseudo-element of a list item as the list item’s first child ..."
https://drafts.csswg.org/css-lists-3/#marker-pseudo
Attachments
Testcase
(161 bytes, text/html)
2021-06-14 16:54 PDT
,
Mats Palmgren
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-06-21 16:55:18 PDT
<
rdar://problem/79587134
>
Alexsander Borges Damaceno
Comment 2
2025-05-28 19:14:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46031
EWS
Comment 3
2025-06-20 12:03:51 PDT
Committed
296451@main
(7a8d12f962c7): <
https://commits.webkit.org/296451@main
> Reviewed commits have been landed. Closing PR #46031 and removing active labels.
Ahmad Saleem
Comment 4
2025-06-20 15:03:56 PDT
***
Bug 245929
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug